Revise organization summary and full description
Updated organization summary and full description to reflect the mission and activities of the JESTARH EDUCATION ASSISTANCE PROGRAM.

--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,24 @@
 #REQUIRED
 org_name: JESTARH EDUCATION ASSISTANCE PROGRAM
 org_summary: > # Enter your summary on the next line. Be sure to indent by two spaces.
-  A mobile-friendly Github Pages template designed to help grassroots nonprofits get a website online quickly
+  JEAP empowers communities in Cameroon with education, skills development, and sustainable support — building stronger futures together.
 org_full_description: > # Enter your description on the next line. Be sure to indent by two spaces.
-  Ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate.
+  The JESTARH EDUCATION ASSISTANCE PROGRAM (JEAP) is a community-focused association 
+  dedicated to improving educational opportunities and support systems for children in 
+  Cameroon. At its core, JEAP provides access to quality learning for pupils from diverse 
+  socio-economic backgrounds by ensuring that schools are equipped with appropriate 
+  teaching and learning materials and resources.
+
+  In addition to educational access, JEAP supports the financial and technical needs of 
+  local schools to foster effective and sustainable operations. The association works to 
+  enhance educational infrastructure and equipment, strengthening the overall learning 
+  environment for students and teachers alike.
+
+  JEAP is committed not only to academic support but also to community empowerment. It 
+  engages children with programs that encourage personal development and helps parents 
+  or guardians actively support their childrens’ learning beyond the classroom. Through 
+  collaboration, compassion, and strategic support, JEAP strives to nurture future 
+  generations and contribute to lasting, positive community impact.
 
 #OPTIONAL
 #Non US-address support coming soon
